k3s/infrastructure/networking/cloudflared/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cf-network-policy
  namespace: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app: cloudflared
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: traefik
            io.kubernetes.pod.namespace: route
      toPorts:
        - ports:
            - port: "8443"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
